fix&refactor: proper title display on frontpage, language pot file added, footer menu wrap fixed

--- a/style.css
+++ b/style.css
@@ -288,6 +288,8 @@ img {
 .footer-menu {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+	justify-content: center;
 }
 
 .newsletter-section {
